config eslint, editorconfig, prettier

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,7 @@
 {
   "emmet.syntaxProfiles": { "javascript": "jsx" },
   "emmet.includeLanguages": { "javascript": "javascriptreact" },
+  "editor.codeActionsOnSave": {
+    "source.fixAll.eslint": true
+  }
 }
