--- a/level-2/package.json
+++ b/level-2/package.json
@@ -9,10 +9,12 @@
     "dev:server:debugger": "ts-node-dev --inspect --transpileOnly --ignore-watch node_modules src/server.ts"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "uuidv4": "^6.1.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.6",
+    "@types/uuidv4": "^5.0.0",
     "@typescript-eslint/eslint-plugin": "^3.4.0",
     "@typescript-eslint/parser": "^3.4.0",
     "eslint": "6.8.0",
