--- a/level-2/.vscode/extensions.json
+++ b/level-2/.vscode/extensions.json
@@ -6,6 +6,7 @@
 	"recommendations": [
 		"editorconfig.editorconfig",
 		"dbaeumer.vscode-eslint",
+		"dracula-theme.theme-dracula"
 	],
 	// List of extensions recommended by VS Code that should not be recommended for users of this workspace.
 	"unwantedRecommendations": [
