--- a/gobarber/package.json
+++ b/gobarber/package.json
@@ -6,11 +6,16 @@
   "scripts": {
     "build": "tsc",
     "dev:server": "ts-node-dev --transpileOnly --ignore-watch node_modules src/server.ts",
-    "dev:server:debugger": "ts-node-dev --inspect --transpileOnly --ignore-watch node_modules src/server.ts"
+    "dev:server:debugger": "ts-node-dev --inspect --transpileOnly --ignore-watch node_modules src/server.ts",
+    "start:postgres": "docker run --name gostack_postgres -e POSTGRES_PASSWORD=docker -p 5432:5432 -d postgres",
+    "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js"
   },
   "dependencies": {
     "date-fns": "^2.14.0",
     "express": "^4.17.1",
+    "pg": "^8.2.2",
+    "reflect-metadata": "^0.1.13",
+    "typeorm": "^0.2.25",
     "uuidv4": "^6.1.1"
   },
   "devDependencies": {
