--- a/gobarber/package.json
+++ b/gobarber/package.json
@@ -11,6 +11,7 @@
     "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "date-fns": "^2.14.0",
     "express": "^4.17.1",
     "pg": "^8.2.2",
@@ -19,6 +20,7 @@
     "uuidv4": "^6.1.1"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.6",
     "@types/uuidv4": "^5.0.0",
     "@typescript-eslint/eslint-plugin": "^3.4.0",
