--- a/gobarber/.vscode/settings.json
+++ b/gobarber/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
   "editor.codeActionsOnSave": {
-    "source.fixAll.eslint": true
+    "source.fixAll.eslint": true,
+    "source.organizeImports": false
   },
-  "workbench.colorTheme": "Dracula",
+  "workbench.colorTheme": "Dracula"
 }
