--- a/gobarber/.eslintrc.json
+++ b/gobarber/.eslintrc.json
@@ -22,6 +22,9 @@
   "rules": {
     "camelcase": "off",
     "class-methods-use-this": "off",
+    "@typescript-eslint/no-unused-vars": ["error", {
+      "argsIgnorePattern": "_"
+    }],
     "import/extensions": [
       "error",
       "ignorePackages",
