--- a/05-primeiro-projeto-react/.vscode/extensions.json
+++ b/05-primeiro-projeto-react/.vscode/extensions.json
@@ -6,7 +6,9 @@
 	"recommendations": [
 		"editorconfig.editorconfig",
 		"dbaeumer.vscode-eslint",
-		"esbenp.prettier-vscode"
+		"esbenp.prettier-vscode",
+		"jpoissonnier.vscode-styled-components",
+		"naumovs.color-highlight"
 	],
 	// List of extensions recommended by VS Code that should not be recommended for users of this workspace.
 	"unwantedRecommendations": [
