--- a/05-primeiro-projeto-react/.vscode/settings.json
+++ b/05-primeiro-projeto-react/.vscode/settings.json
@@ -2,5 +2,6 @@
   "editor.codeActionsOnSave": {
     "source.fixAll.eslint": true
   },
-  "editor.rulers": [80]
+  "editor.rulers": [80],
+  "editor.renderLineHighlight": "gutter"
 }
