--- a/appgobarber/.eslintrc.json
+++ b/appgobarber/.eslintrc.json
@@ -34,6 +34,9 @@
     "react/jsx-filename-extension": [1, { "extensions": [".tsx"] }],
     "import/prefer-default-export": "off",
     "react/jsx-props-no-spreading": "off",
+    "no-unused-expressions": "off",
+    "no-alert": "off",
+    "no-console": "off",
     "@typescript-eslint/no-empty-function": "off",
     "react/prop-types": "off",
     "import/extensions": [
