--- a/appgobarber/.eslintrc.json
+++ b/appgobarber/.eslintrc.json
@@ -33,6 +33,7 @@
     "react-hooks/exhaustive-deps": "warn",
     "react/jsx-filename-extension": [1, { "extensions": [".tsx"] }],
     "import/prefer-default-export": "off",
+    "consistent-return": "off",
     "react/jsx-props-no-spreading": "off",
     "no-unused-expressions": "off",
     "@typescript-eslint/no-empty-function": "off",
