feat: notification with mongodb

--- a/gobarber/package.json
+++ b/gobarber/package.json
@@ -11,6 +11,9 @@
     "run:postgres": "docker run --name gostack_postgres -e POSTGRES_PASSWORD=docker -p 5432:5432 -d postgres",
     "start:postgres": "docker start gostack_postgres",
     "stop:postgress": "docker stop gostack_postgres",
+    "run:mongo": "docker run --name mongodb -p 27017:27017 -d -t mongo",
+    "start:mongo": "docker start mongodb",
+    "stop:mongo": "docker stop mongodb",
     "typeorm": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
     "test": "jest"
   },
@@ -22,6 +25,7 @@
     "express-async-errors": "^3.1.1",
     "handlebars": "^4.7.6",
     "jsonwebtoken": "^8.5.1",
+    "mongodb": "^3.6.2",
     "multer": "^1.4.2",
     "nodemailer": "^6.4.11",
     "pg": "^8.2.2",
@@ -35,6 +39,7 @@
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.6",
     "@types/jsonwebtoken": "^8.5.0",
+    "@types/mongodb": "^3.5.27",
     "@types/multer": "^1.4.3",
     "@types/nodemailer": "^6.4.0",
     "@types/uuidv4": "^5.0.0",
