--- a/gobarber/.vscode/extensions.json
+++ b/gobarber/.vscode/extensions.json
@@ -8,7 +8,8 @@
 		"dbaeumer.vscode-eslint",
 		"dracula-theme.theme-dracula",
 		"hediet.vscode-drawio",
-		"humao.rest-client"
+		"humao.rest-client",
+		"mikestead.dotenv"
 	],
 	// List of extensions recommended by VS Code that should not be recommended for users of this workspace.
 	"unwantedRecommendations": [
