--- a/gobarber/package.json
+++ b/gobarber/package.json
@@ -15,13 +15,15 @@
     "start:mongo": "docker start mongodb",
     "stop:mongo": "docker stop mongodb",
     "typeorm": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
-    "test": "jest"
+    "test": "jest",
+    "postinstall": "node -p \"fs.existsSync('.env') || fs.copyFileSync('.env.example', '.env')\""
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "celebrate": "^13.0.3",
     "cors": "^2.8.5",
     "date-fns": "^2.14.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "handlebars": "^4.7.6",
