--- a/gobarber/package.json
+++ b/gobarber/package.json
@@ -19,6 +19,7 @@
     "postinstall": "node -p \"fs.existsSync('.env') || fs.copyFileSync('.env.example', '.env')\""
   },
   "dependencies": {
+    "aws-sdk": "^2.769.0",
     "bcryptjs": "^2.4.3",
     "celebrate": "^13.0.3",
     "class-transformer": "^0.3.1",
@@ -29,6 +30,7 @@
     "express-async-errors": "^3.1.1",
     "handlebars": "^4.7.6",
     "jsonwebtoken": "^8.5.1",
+    "mime": "^2.4.6",
     "mongodb": "^3.6.2",
     "multer": "^1.4.2",
     "nodemailer": "^6.4.11",
