--- a/gobarber/package.json
+++ b/gobarber/package.json
@@ -14,8 +14,10 @@
     "run:mongo": "docker run --name mongodb -p 27017:27017 -d -t mongo",
     "start:mongo": "docker start mongodb",
     "stop:mongo": "docker stop mongodb",
+    "run:redis": "docker run --name redis -p 6379:6379 -d -t redis:alpine",
+    "start:redis": "docker start redis",
     "typeorm": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
-    "test": "jest",
+    "test": "APP_SECRET=secret jest",
     "postinstall": "node -p \"fs.existsSync('.env') || fs.copyFileSync('.env.example', '.env')\""
   },
   "dependencies": {
@@ -29,6 +31,7 @@
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "handlebars": "^4.7.6",
+    "ioredis": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
     "mime": "^2.4.6",
     "mongodb": "^3.6.2",
@@ -44,6 +47,7 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.6",
+    "@types/ioredis": "^4.17.4",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/mongodb": "^3.5.27",
     "@types/multer": "^1.4.3",
