--- a/gobarber/package.json
+++ b/gobarber/package.json
@@ -16,6 +16,9 @@
     "stop:mongo": "docker stop mongodb",
     "run:redis": "docker run --name redis -p 6379:6379 -d -t redis:alpine",
     "start:redis": "docker start redis",
+    "stop:redis": "docker stop redis",
+    "start:services": "yarn start:postgres; yarn start:mongo; yarn start:redis",
+    "stop:services": "yarn stop:postgres; yarn stop:mongo; yarn stop:redis",
     "typeorm": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
     "test": "APP_SECRET=secret jest",
     "postinstall": "node -p \"fs.existsSync('.env') || fs.copyFileSync('.env.example', '.env')\""
@@ -38,6 +41,8 @@
     "multer": "^1.4.2",
     "nodemailer": "^6.4.11",
     "pg": "^8.2.2",
+    "rate-limiter-flexible": "^2.1.10",
+    "redis": "^3.0.2",
     "reflect-metadata": "^0.1.13",
     "tsyringe": "^4.3.0",
     "typeorm": "^0.2.25",
@@ -52,6 +57,7 @@
     "@types/mongodb": "^3.5.27",
     "@types/multer": "^1.4.3",
     "@types/nodemailer": "^6.4.0",
+    "@types/redis": "^2.8.27",
     "@types/uuidv4": "^5.0.0",
     "@typescript-eslint/eslint-plugin": "^3.4.0",
     "@typescript-eslint/parser": "^3.4.0",
