--- a/06-gobarber-web/.eslintrc.json
+++ b/06-gobarber-web/.eslintrc.json
@@ -32,6 +32,7 @@
     "react-hooks/rules-of-hooks": "error",
     "react-hooks/exhaustive-deps": "warn",
     "react/jsx-props-no-spreading": "off",
+    "import/no-duplicates": "off",
     "camelcase": "off",
     "no-unused-expressions": "off",
     "react/prop-types": "off",
