--- a/appgobarber/.eslintrc.json
+++ b/appgobarber/.eslintrc.json
@@ -34,6 +34,7 @@
     "react/jsx-filename-extension": [1, { "extensions": [".tsx"] }],
     "import/prefer-default-export": "off",
     "consistent-return": "off",
+    "camelcase": "off",
     "react/jsx-props-no-spreading": "off",
     "no-unused-expressions": "off",
     "@typescript-eslint/no-empty-function": "off",
