--- a/appgobarber/package.json
+++ b/appgobarber/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "android": "react-native run-android",
+    "adb:reverse": "adb reverse tcp:3333 tcp:3333",
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
